--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,10 +9,6 @@
     ":enablePreCommit",               // Enable updates to pre-commit repos
     ":gitSignOff"                     // Add Signed-off-by line to commit messages
   ],
-  // Files to ignore
-  // "ignorePaths": [
-  //   "docs/requirements.txt"
-  // ],
   "labels": [
     "dependencies"
   ],
@@ -29,12 +25,12 @@
       "schedule": ["before 9am on monday"]
     }
   ],
-  "regexManagers": [
+  "customManagers": [
     {
       "customType": "regex",
       "description": "devcontainer base image",
-      "fileMatch": [
-        "/devcontainer.json$"
+      "managerFilePatterns": [
+        "/(^|/)devcontainer.json$/"
       ],
       "matchStrings": [
         "\"image\"\\s*:\\s*\"(?<depName>.*?):(?<currentValue>.*?)(@(?<currentDigest>sha256:[a-f0-9]+))?\""
@@ -44,8 +40,8 @@
     {
       "customType": "regex",
       "description": "devcontainer feature images",
-      "fileMatch": [
-        "/devcontainer.json$"
+      "managerFilePatterns": [
+        "/(^|/)devcontainer.json$/"
       ],
       "matchStrings": [
         // devcontainer features don't support sha256 digests
